[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "site-steward"
version = "0.1.0"
description = "Local-first homepage reviewer for ministry and portfolio sites"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "pydantic>=2.0",
  "requests>=2.31",
  "typer>=0.12"
]

[project.scripts]
site-steward = "site_steward.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["site_steward*"]

